# geni

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements-pkg.txt  requirements.txt  setup.py
.github/workflows/: lint.yaml  pypi.yaml  pypitest.yaml  test.yaml  typecheck.yaml
examples/: README.md  delete_all_managed_profiles.py  fetch_all_managed_profiles.py  intro.py  update_profiles.py
geni/: __init__.py  geni.py  profile.py  stats.py  user.py
geni/internal/: auth.py  caller.py  ratelimiter.py
tests/: test_caller.py  test_geni.py  test_profile.py  test_stats.py  test_user.py
tests/internal/: fixtures.py  helper.py  test_auth.py  test_caller.py  test_ratelimiter.py
tests/internal/fixtures/: response.py
